Added loading screen

--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
 </head>
 
 <body>
+
+    <!-- Loading Screen -->
+    <div id="loadingScreen">
+        Loading... Please wait
+    </div>
+
     <!-- Heading Top Left -->
     <h1 class="top-left">G.L. Bajaj Institutions</h1>
 
