--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         </div>
 
         <div class="footer-text">
-            G.L. Bajaj Institutions | Crafted by Rudransh
+            Crafted by Rudransh | Controlled by Arnav
         </div>
     </div>
 
